# zzk1

./: .gitignore  README.md  pyproject.toml  test_chinese.py
app/: __init__.py  main.py
app/api/: __init__.py  skills.py
app/core/: __init__.py  base.py  processor.py
app/models/: __init__.py  skill.py
app/schemas/: __init__.py  request.py
app/services/: agnes_image.py
document-generator/: SKILL.md
document-generator/references/: animations.md  canvas-formats.md  image-layout-patterns.md  shared-standards.md  svg-image-embedding.md
ppt-master/: SKILL.md
tests/: __init__.py  test_processor.py  test_registry.py
